force-app/main/default/objects/Vendor_Pricing__c/Vendor_Pricing__c.object-meta.xml
<CustomObject>
    <label>Vendor Pricing</label>
    <nameField>
        <displayFormat>VP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Pricings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>