force-app/main/default/objects/Vendor_Pricing__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Vendor Pricings</relationshipLabel>
    <relationshipName>Vendor_Pricings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>