force-app/main/default/objects/Vendor_Pricing__c/fields/Purchase_Cost__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Cost__c</fullName>
    <label>Purchase Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>