force-app/main/default/objects/Vendor_Pricing__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Vendor Pricings (Repair Vendor)</relationshipLabel>
    <relationshipName>Vendor_Pricing_Repair_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>