force-app/main/default/objects/Vendor_Pricing__c/fields/Vendor_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Pricing__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, Name &amp; &quot;_&quot; &amp; Item__r.Name &amp; &quot;_&quot; &amp; IF(ISBLANK(Vendor__c), &quot;&quot;, Vendor__r.Name), &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Pricing</label>
    <type>Text</type>
</CustomField>