force-app/main/default/objects/Vendor_Pricing__c/fields/Vendor_Pricing_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Pricing_Name__c</fullName>
    <formula>Name &amp; &quot;_&quot; &amp; Item__r.Name &amp; &quot;_&quot; &amp; IF(ISBLANK(Vendor__c), &quot;&quot;, Vendor__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Pricing Name</label>
    <type>Text</type>
</CustomField>