force-app/main/default/objects/Vendor_Pricing__c/listViews/All_Vendor_Pricing.listView-meta.xml
<ListView>
    <fullName>All_Vendor_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Vendor Pricing</label>
</ListView>